--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "coveralls": "^3.0.2",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
+    "husky": "^1.2.0",
     "nyc": "^13.0.1",
     "react-test-renderer": "^16.6.3",
     "redux-mock-store": "^1.5.3"
