--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,8 @@ cache:
 
 before_script:
   - npm run build
-after_success:
-- npm run coveralls
+
+script:
+  - npm run test:converage
+
+after_script: "cat ./coverage/lcov.info | coveralls"
