--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - "10.10.0"
+  - "10.13.0"
 cache:
   directories:
     "node_modules"
@@ -9,6 +9,6 @@ before_script:
   - npm run build
 
 script:
-  - npm run test:converage
+  - npm run test:coverage
 
 after_script: "cat ./coverage/lcov.info | coveralls"
