--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "lint": "eslint ./src/**/*.js",
-    "test:converage": "npm test -- --coverage",
-    "coveralls": "npm run test:converage | coveralls"
+    "test:coverage": "npm test -- --coverage",
+    "lint": "eslint ./src/**/*.js"
   },
   "nyc": {
     "functions": 80,
