--- a/.huskyrc.json
+++ b/.huskyrc.json
@@ -1,6 +1,6 @@
 {
   "hooks": {
     "pre-commit": "npm run lint -- --fix",
-    "pre-push": "npm run lint && npm run test:converage"
+    "pre-push": "npm run lint && npm run test:coverage"
   }
 }
